--- a/monsters.html
+++ b/monsters.html
@@ -35,7 +35,7 @@ body {
   padding: 14px 24px 10px; border-bottom: 1px solid rgba(255,255,255,0.05);
 }
 .app-title {
-  font-family: 'Cinzel', serif; font-size: 1.5rem; font-weight: 900;
+  font-family: 'Cinzel', serif; font-size: 1.3rem; font-weight: 900;
   letter-spacing: 0.08em; color: var(--gold);
   text-shadow: 0 0 20px rgba(201,168,76,0.4); text-transform: uppercase;
 }
@@ -78,7 +78,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
 .search-input { min-width: 180px; }
 .pill-filters { display: flex; gap: 4px; flex-wrap: wrap; align-items: center; }
 .pill {
-  font-family: 'Cinzel', serif; font-size: 0.58rem; letter-spacing: 0.06em;
+  font-family: 'Cinzel', serif; font-size: 0.62rem; letter-spacing: 0.06em;
   font-weight: 600; border-radius: 3px; padding: 3px 7px;
   cursor: pointer; border: 1px solid var(--border);
   background: rgba(255,255,255,0.04); color: var(--text-muted);
@@ -108,7 +108,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
   display: flex; flex-direction: column; align-items: center;
   justify-content: center; padding: 100px 24px; text-align: center; color: var(--text-dim);
 }
-#empty-state .rune { font-size: 4rem; opacity: 0.25; margin-bottom: 20px; display: block; }
+#empty-state .rune { width: 4rem; height: 4rem; opacity: 0.25; margin-bottom: 20px; display: block; }
 #empty-state h2 { font-family: 'Cinzel', serif; font-size: 1.3rem; color: var(--text-muted); margin-bottom: 10px; letter-spacing: 0.05em; }
 
 /* MONSTER CARD */
@@ -175,7 +175,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
 /* MODAL */
 #modal-overlay {
   display: none; position: fixed; inset: 0;
-  background: rgba(0,0,0,0.85); z-index: 500;
+  background: rgba(0,0,0,0.88); z-index: 1000;
   align-items: center; justify-content: center;
   padding: 24px; backdrop-filter: blur(4px);
 }
@@ -235,7 +235,36 @@ input[type="text"]::placeholder { color: #6a6a80; }
 
 .btn { font-family: 'Cinzel', serif; font-size: 0.75rem; font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; border: none; border-radius: 4px; padding: 7px 16px; cursor: pointer; transition: all 0.15s ease; }
 .btn-print { background: linear-gradient(135deg, #c9a84c, #8a6a2c); color: #1a1a2e; font-weight: 700; box-shadow: 0 2px 12px rgba(201,168,76,0.3); }
-.btn-print:hover { transform: translateY(-1px); box-shadow: 0 4px 16px rgba(201,168,76,0.5); }
+.btn-print:hover:not(:disabled) { transform: translateY(-1px); box-shadow: 0 4px 16px rgba(201,168,76,0.5); }
+.btn-print:disabled { opacity: 0.4; cursor: not-allowed; }
+.btn-ghost { font-family: 'Cinzel', serif; font-size: 0.7rem; font-weight: 600; letter-spacing: 0.06em; text-transform: uppercase; border: 1px solid var(--border); border-radius: 4px; padding: 5px 12px; cursor: pointer; background: transparent; color: var(--text-muted); transition: all 0.15s; white-space: nowrap; }
+.btn-ghost:hover:not(:disabled) { color: var(--gold); border-color: rgba(201,168,76,0.5); }
+.btn-ghost:disabled { opacity: 0.35; cursor: not-allowed; }
+.selection-badge { font-family: 'Cinzel', serif; font-size: 0.65rem; font-weight: 700; letter-spacing: 0.07em; color: var(--gold); background: rgba(201,168,76,0.12); border: 1px solid rgba(201,168,76,0.3); border-radius: 4px; padding: 4px 10px; white-space: nowrap; }
+.mon-card.selected { outline: 2px solid var(--gold); outline-offset: 2px; box-shadow: 0 0 0 4px rgba(201,168,76,0.18), 0 10px 36px rgba(0,0,0,0.6); }
+.select-indicator { position: absolute; top: 6px; right: 6px; width: 18px; height: 18px; border-radius: 50%; border: 2px solid rgba(255,255,255,0.6); background: rgba(0,0,0,0.3); display: flex; align-items: center; justify-content: center; font-size: 0.65rem; color: transparent; transition: all 0.12s; pointer-events: none; z-index: 2; }
+.mon-card.selected .select-indicator { background: var(--gold); border-color: var(--gold); color: #1a1a2e; }
+.mon-card.selected .select-indicator::after { content: '✓'; font-weight: 700; }
+
+/* PRINT PREVIEW OVERLAY */
+#print-preview-overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.92); z-index: 600; flex-direction: column; align-items: center; }
+#print-preview-overlay.active { display: flex; }
+.print-preview-toolbar { display: flex; align-items: center; gap: 12px; padding: 14px 24px; background: rgba(22,33,62,0.98); border-bottom: 1px solid var(--border); width: 100%; flex-shrink: 0; }
+.print-preview-title { font-family: 'Cinzel', serif; font-size: 0.85rem; font-weight: 700; letter-spacing: 0.1em; color: var(--gold); text-transform: uppercase; flex: 1; }
+.print-preview-scroll { flex: 1; overflow-y: auto; padding: 24px; display: flex; flex-direction: column; align-items: center; gap: 20px; width: 100%; }
+.print-preview-page { background: #fff; width: min(900px, 100%); aspect-ratio: 297/210; display: grid; grid-template-columns: repeat(4, 1fr); grid-template-rows: repeat(2, 1fr); gap: 4px; padding: 10px; box-shadow: 0 4px 24px rgba(0,0,0,0.5); border-radius: 4px; }
+.print-preview-page .mon-card { border-radius: 3px; font-size: 0.52rem; cursor: default; transform: none !important; box-shadow: none !important; }
+.print-preview-page .mon-card:hover { transform: none !important; }
+.print-preview-page .card-header { padding: 4px 6px; }
+.print-preview-page .card-name { font-size: 0.58rem; }
+.print-preview-page .cr-badge { font-size: 0.5rem; }
+.print-preview-page .stat-label { font-size: 0.48rem; }
+.print-preview-page .stat-val { font-size: 0.52rem; }
+.print-preview-page .trait-tag { font-size: 0.42rem; }
+.print-preview-page .ability-line { font-size: 0.48rem; }
+.print-preview-page .card-stats-block { padding: 3px 6px; }
+.print-preview-page .card-traits { padding: 2px 6px 3px; }
+.print-preview-page .select-indicator { display: none; }
 
 @media print {
   * { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; }
@@ -253,6 +282,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
   .print-page .trait-tag { font-size: 0.44rem !important; }
   .print-page .ability-line { font-size: 0.5rem !important; }
   .print-page .card-stats-block { padding: 4px 7px 3px !important; }
+  .print-page .select-indicator { display: none !important; }
 }
 
 #btn-filter-toggle { display: none; }
@@ -261,7 +291,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
   .header-top { padding: 8px 14px; }
   .app-title { font-size: clamp(0.75rem, 3.5vw, 1.1rem); }
   .app-title span { display: none; }
-  .btn-print { display: none; }
+  .btn-print,.btn-ghost,.selection-badge,.select-indicator { display: none !important; }
   #btn-filter-toggle { display: flex; align-items: center; gap: 4px; font-size: 0.7rem; padding: 4px 10px; background: rgba(201,168,76,0.15); border: 1px solid rgba(201,168,76,0.4); color: var(--gold); border-radius: 6px; cursor: pointer; font-family: 'Cinzel', serif; font-weight: 600; letter-spacing: 0.05em; }
   .filter-bar { max-height: 0; overflow: hidden; transition: max-height 0.3s ease; padding: 0 14px; }
   .filter-bar.expanded { max-height: 500px; padding: 10px 14px 12px; }
@@ -353,16 +383,19 @@ input[type="text"]::placeholder { color: #6a6a80; }
 <div id="app-header">
   <div class="header-top">
     <div class="app-title">Monster Codex <span>D&D 5e Quick Reference</span></div>
-    <div style="display:flex;align-items:center;gap:12px;">
-      <button class="btn btn-print" onclick="printCards()" style="display:none;" id="btn-print-top">Print to PDF</button>
+    <div style="display:flex;align-items:center;gap:8px;">
+      <span class="selection-badge" id="selection-count">0 selected</span>
+      <button class="btn-ghost" id="btn-select-all" onclick="selectAllVisible()" disabled>Select All</button>
+      <button class="btn-ghost" id="btn-clear" onclick="clearSelection()" disabled>Clear</button>
+      <button class="btn btn-print" id="btn-print" onclick="openPrintPreview()" disabled>&#128424; Print to PDF</button>
       <button id="btn-filter-toggle" onclick="toggleFilters()">Filters <span id="toggle-arrow">▼</span></button>
       <button class="hamburger-btn" onclick="openNav()" aria-label="Open navigation"><span></span><span></span><span></span></button>
     </div>
   </div>
   <div class="filter-bar" id="filter-bar">
-    <span class="filter-label">Search</span>
-    <input type="text" class="search-input" id="search-input" placeholder="Search monsters…" oninput="applyFilters()">
-    <span class="filter-label">CR</span>
+    <label for="search-input" class="filter-label">Search</label>
+    <input type="text" class="search-input" id="search-input" placeholder="Search monsters…" oninput="applyFilters()" aria-label="Search monsters">
+    <label for="cr-min" class="filter-label">CR</label>
     <select id="cr-min" onchange="applyFilters()">
       <option value="">Min</option>
       <option value="0">0</option><option value="0.125">1/8</option><option value="0.25">1/4</option>
@@ -375,7 +408,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
       <option value="21">21</option><option value="23">23</option><option value="24">24</option>
       <option value="30">30</option>
     </select>
-    <select id="cr-max" onchange="applyFilters()">
+    <select id="cr-max" onchange="applyFilters()" aria-label="Maximum CR">
       <option value="">Max</option>
       <option value="0">0</option><option value="0.125">1/8</option><option value="0.25">1/4</option>
       <option value="0.5">1/2</option><option value="1">1</option><option value="2">2</option>
@@ -393,13 +426,13 @@ input[type="text"]::placeholder { color: #6a6a80; }
     <div class="filter-divider"></div>
     <span class="filter-label">Size</span>
     <div class="pill-filters" id="size-pills">
-      <div class="pill active" data-val="all" onclick="togglePill(this,'size')">All</div>
-      <div class="pill" data-val="Tiny" onclick="togglePill(this,'size')">Tiny</div>
-      <div class="pill" data-val="Small" onclick="togglePill(this,'size')">Small</div>
-      <div class="pill" data-val="Medium" onclick="togglePill(this,'size')">Medium</div>
-      <div class="pill" data-val="Large" onclick="togglePill(this,'size')">Large</div>
-      <div class="pill" data-val="Huge" onclick="togglePill(this,'size')">Huge</div>
-      <div class="pill" data-val="Gargantuan" onclick="togglePill(this,'size')">Garg.</div>
+      <button type="button" class="pill active" data-val="all" onclick="togglePill(this,'size')" aria-pressed="true">All</button>
+      <button type="button" class="pill" data-val="Tiny" onclick="togglePill(this,'size')">Tiny</button>
+      <button type="button" class="pill" data-val="Small" onclick="togglePill(this,'size')">Small</button>
+      <button type="button" class="pill" data-val="Medium" onclick="togglePill(this,'size')">Medium</button>
+      <button type="button" class="pill" data-val="Large" onclick="togglePill(this,'size')">Large</button>
+      <button type="button" class="pill" data-val="Huge" onclick="togglePill(this,'size')">Huge</button>
+      <button type="button" class="pill" data-val="Gargantuan" onclick="togglePill(this,'size')">Garg.</button>
     </div>
     <button class="btn-reset" onclick="resetFilters()">Reset</button>
   </div>
@@ -407,12 +440,20 @@ input[type="text"]::placeholder { color: #6a6a80; }
 <div id="results-bar"></div>
 <div id="card-grid"></div>
 <div id="empty-state" style="display:none;">
-  <span class="rune">🐉</span>
+  <svg class="rune" viewBox="0 0 64 64" fill="none" stroke="currentColor" stroke-width="1.5" aria-hidden="true"><circle cx="32" cy="32" r="28"/><path d="M32 14v36M14 32h36M20 20l24 24M44 20L20 44"/></svg>
   <h2>No Monsters Found</h2>
   <p>Adjust your filters to find your quarry.</p>
 </div>
 <div id="modal-overlay" onclick="handleModalClick(event)">
   <div id="modal-box"></div>
+</div>
+<div id="print-preview-overlay">
+  <div class="print-preview-toolbar">
+    <span class="print-preview-title">&#128424; Print Preview</span>
+    <button class="btn btn-print" onclick="executePrint()">Open Print Dialog</button>
+    <button class="btn-ghost" onclick="closePrintPreview()">&#x2715; Close</button>
+  </div>
+  <div class="print-preview-scroll" id="print-preview-scroll"></div>
 </div>
 <div id="print-output"></div>
 
@@ -717,10 +758,10 @@ let searchQ = '';
 
 function initPills() {
   const tp = document.getElementById('type-pills');
-  tp.innerHTML = `<div class="pill active" data-val="all" onclick="togglePill(this,'type')">All</div>` +
-    TYPES.map(t => `<div class="pill" data-val="${t}" onclick="togglePill(this,'type')"
+  tp.innerHTML = `<button type="button" class="pill active" data-val="all" onclick="togglePill(this,'type')" aria-pressed="true">All</button>` +
+    TYPES.map(t => `<button type="button" class="pill" data-val="${t}" onclick="togglePill(this,'type')"
       style="${activeTypes.has(t)?'background:'+TYPE_COLORS[t]+';color:#fff;border-color:transparent':''}"
-    >${t.charAt(0).toUpperCase()+t.slice(1)}</div>`).join('');
+    >${t.charAt(0).toUpperCase()+t.slice(1)}</button>`).join('');
 }
 
 function togglePill(pill, group) {
@@ -773,7 +814,7 @@ function filtered() {
   });
 }
 
-function buildCard(m) {
+function buildCard(m, forPreview) {
   const color = TYPE_COLORS[m.type] || '#555';
   const tags = [];
   if (m.legendary) tags.push(`<span class="trait-tag legendary">Legendary</span>`);
@@ -782,8 +823,11 @@ function buildCard(m) {
   if (m.dmgResist?.length) tags.push(`<span class="trait-tag dmg-resist">Resist: ${m.dmgResist.slice(0,2).join(', ')}</span>`);
   if (m.condImmune?.length) tags.push(`<span class="trait-tag cond-immune">Cond. Immune: ${m.condImmune.slice(0,3).join(', ')}</span>`);
   const keyAbility = m.abilities?.[0];
-  return `<div class="mon-card" style="border-color:${color}20">
+  const sel = !forPreview && selectedMonsters.has(m.name) ? ' selected' : '';
+  const indicator = forPreview ? '' : `<div class="select-indicator"></div>`;
+  return `<div class="mon-card${sel}" style="border-color:${color}20">
     <div class="card-header" style="background:${color}">
+      ${indicator}
       <div style="flex:1">
         <div class="card-name">${m.name}</div>
         <span class="card-subtype">${m.size} ${m.type.charAt(0).toUpperCase()+m.type.slice(1)}</span>
@@ -811,7 +855,10 @@ function renderGrid() {
   if (!list.length) { grid.innerHTML = ''; empty.style.display = 'flex'; return; }
   empty.style.display = 'none';
   grid.innerHTML = list.map(m => buildCard(m)).join('');
-  grid.querySelectorAll('.mon-card').forEach((el, i) => el.addEventListener('click', () => openModal(list[i])));
+  grid.querySelectorAll('.mon-card').forEach((el, i) => {
+    el.addEventListener('click', () => toggleSelect(list[i]));
+    el.addEventListener('dblclick', () => openModal(list[i]));
+  });
 }
 
 function openModal(m) {
@@ -872,7 +919,6 @@ function handleModalClick(e) {
   if (e.target === document.getElementById('modal-overlay')) closeModal();
 }
 function closeModal() { document.getElementById('modal-overlay').classList.remove('active'); }
-document.addEventListener('keydown', e => { if (e.key === 'Escape') closeModal(); });
 
 function toggleFilters() {
   const bar = document.getElementById('filter-bar');
@@ -880,21 +926,73 @@ function toggleFilters() {
   document.getElementById('toggle-arrow').textContent = bar.classList.contains('expanded') ? '▲' : '▼';
 }
 
-function printCards() {
-  const list = filtered();
+const selectedMonsters = new Set();
+
+function toggleSelect(m) {
+  if (selectedMonsters.has(m.name)) selectedMonsters.delete(m.name);
+  else selectedMonsters.add(m.name);
+  updateSelectionUI();
+  renderGrid();
+}
+
+function selectAllVisible() {
+  filtered().forEach(m => selectedMonsters.add(m.name));
+  updateSelectionUI();
+  renderGrid();
+}
+
+function clearSelection() {
+  selectedMonsters.clear();
+  updateSelectionUI();
+  renderGrid();
+}
+
+function updateSelectionUI() {
+  const n = selectedMonsters.size;
+  document.getElementById('selection-count').textContent = `${n} selected`;
+  const hasSel = n > 0;
+  document.getElementById('btn-print').disabled = !hasSel;
+  document.getElementById('btn-clear').disabled = !hasSel;
+  document.getElementById('btn-select-all').disabled = filtered().length === 0;
+}
+
+function openPrintPreview() {
+  const list = MONSTERS.filter(m => selectedMonsters.has(m.name));
+  const scroll = document.getElementById('print-preview-scroll');
+  const pages = [];
+  for (let i = 0; i < list.length; i += 8) pages.push(list.slice(i, i + 8));
+  scroll.innerHTML = pages.map(page =>
+    `<div class="print-preview-page">${page.map(m => buildCard(m, true)).join('')}</div>`
+  ).join('');
+  document.getElementById('print-preview-overlay').classList.add('active');
+}
+
+function closePrintPreview() {
+  document.getElementById('print-preview-overlay').classList.remove('active');
+}
+
+function executePrint() {
+  const list = MONSTERS.filter(m => selectedMonsters.has(m.name));
   const output = document.getElementById('print-output');
   const pages = [];
   for (let i = 0; i < list.length; i += 8) pages.push(list.slice(i, i + 8));
-  output.innerHTML = pages.map(page => `<div class="print-page">${page.map(m => buildCard(m)).join('')}</div>`).join('');
+  output.innerHTML = pages.map(page =>
+    `<div class="print-page">${page.map(m => buildCard(m, true)).join('')}</div>`
+  ).join('');
   window.print();
+  setTimeout(() => { output.innerHTML = ''; }, 1500);
 }
+
+document.addEventListener('keydown', e => {
+  if (e.key === 'Escape') { closeModal(); closePrintPreview(); }
+});
 
 document.addEventListener('DOMContentLoaded', () => {
   document.getElementById('cr-min').addEventListener('change', renderGrid);
   document.getElementById('cr-max').addEventListener('change', renderGrid);
-  document.getElementById('btn-print-top').style.display = 'block';
   initPills();
   renderGrid();
+  updateSelectionUI();
 });
 initPills();
 renderGrid();
