--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ body::before {
       <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
       &nbsp;Hub
     </a>
-    <span class="nav-section-label">Tools</span>
+    <span class="nav-section-label">Reference</span>
     <a href="spelltome.html" class="nav-item">
       <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/></svg>
       &nbsp;Spell Tome
@@ -283,9 +283,14 @@ body::before {
       <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polygon points="6 3 18 3 22 9 12 22 2 9"/><line x1="2" y1="9" x2="22" y2="9"/><line x1="12" y1="3" x2="6" y2="9"/><line x1="12" y1="3" x2="18" y2="9"/></svg>
       &nbsp;Magic Item Compendium
     </a>
+    <span class="nav-section-label">Table Tools</span>
     <a href="combat-tracker.html" class="nav-item">
       <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="14.5 17.5 3 6 3 3 6 3 17.5 14.5"/><line x1="13" y1="19" x2="19" y2="13"/><line x1="16" y1="16" x2="20" y2="20"/><line x1="19" y1="21" x2="21" y2="19"/><polyline points="14.5 6.5 18 3 21 3 21 6 17.5 9.5"/><line x1="5" y1="14" x2="9" y2="18"/><line x1="7" y1="17" x2="3" y2="21"/><line x1="3" y1="19" x2="5" y2="21"/></svg>
       &nbsp;Combat Tracker
+    </a>
+    <a href="dice-roller.html" class="nav-item">
+      <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="3" y="3" width="8" height="8" rx="1.5"/><rect x="13" y="3" width="8" height="8" rx="1.5"/><rect x="3" y="13" width="8" height="8" rx="1.5"/><rect x="13" y="13" width="8" height="8" rx="1.5"/><circle cx="7" cy="7" r="1" fill="currentColor" stroke="none"/><circle cx="17" cy="7" r="1" fill="currentColor" stroke="none"/><circle cx="7" cy="17" r="1" fill="currentColor" stroke="none"/><circle cx="17" cy="17" r="1" fill="currentColor" stroke="none"/></svg>
+      &nbsp;Dice Roller
     </a>
   </div>
 </nav>
@@ -334,7 +339,7 @@ body::before {
     </div>
 
     <div class="tools-wrap">
-      <p class="section-eyebrow">Choose your reference</p>
+      <p class="section-eyebrow">Reference</p>
       <div class="tool-grid">
 
         <!-- SPELL TOME -->
@@ -466,6 +471,11 @@ body::before {
           </div>
         </a>
 
+      </div>
+
+      <p class="section-eyebrow" style="margin-top:52px;">Table Tools</p>
+      <div class="tool-grid">
+
         <!-- COMBAT TRACKER -->
         <a href="combat-tracker.html" class="tool-card" style="--accent:#c0392b;">
           <div class="card-stripe"></div>
@@ -491,6 +501,36 @@ body::before {
               <span class="c-pill" style="color:#c0392b;border:1px solid rgba(192,57,43,0.3);background:rgba(192,57,43,0.08);">Death Saves</span>
               <span class="c-pill" style="color:#c0392b;border:1px solid rgba(192,57,43,0.3);background:rgba(192,57,43,0.08);">HP Tracking</span>
               <span class="c-pill" style="color:#c0392b;border:1px solid rgba(192,57,43,0.3);background:rgba(192,57,43,0.08);">Saved Party</span>
+            </div>
+            <div class="card-foot">Open tool <span class="c-arrow">&#x2192;</span></div>
+          </div>
+        </a>
+
+        <!-- DICE ROLLER -->
+        <a href="dice-roller.html" class="tool-card" style="--accent:#7b5ea7;">
+          <div class="card-stripe"></div>
+          <div class="card-inner">
+            <div class="card-top">
+              <div class="card-glyph" style="color:#7b5ea7;">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                  <rect x="3" y="3" width="8" height="8" rx="1.5"/>
+                  <rect x="13" y="3" width="8" height="8" rx="1.5"/>
+                  <rect x="3" y="13" width="8" height="8" rx="1.5"/>
+                  <rect x="13" y="13" width="8" height="8" rx="1.5"/>
+                  <circle cx="7" cy="7" r="1" fill="#7b5ea7" stroke="none"/>
+                  <circle cx="17" cy="7" r="1" fill="#7b5ea7" stroke="none"/>
+                  <circle cx="7" cy="17" r="1" fill="#7b5ea7" stroke="none"/>
+                  <circle cx="17" cy="17" r="1" fill="#7b5ea7" stroke="none"/>
+                </svg>
+              </div>
+              <span class="card-name">Dice Roller</span>
+            </div>
+            <p class="card-desc">One-tap quick rolls for d4 through d20, plus a custom expression parser for any NdS+M combination. Full roll history stored in the browser and ready to clear between sessions.</p>
+            <div class="card-pills">
+              <span class="c-pill" style="color:#7b5ea7;border:1px solid rgba(123,94,167,0.3);background:rgba(123,94,167,0.08);">d4 &ndash; d20</span>
+              <span class="c-pill" style="color:#7b5ea7;border:1px solid rgba(123,94,167,0.3);background:rgba(123,94,167,0.08);">Custom Expressions</span>
+              <span class="c-pill" style="color:#7b5ea7;border:1px solid rgba(123,94,167,0.3);background:rgba(123,94,167,0.08);">Roll History</span>
+              <span class="c-pill" style="color:#7b5ea7;border:1px solid rgba(123,94,167,0.3);background:rgba(123,94,167,0.08);">Modifiers</span>
             </div>
             <div class="card-foot">Open tool <span class="c-arrow">&#x2192;</span></div>
           </div>
